--- a/ChalkboardChat.UI/appsettings.json
+++ b/ChalkboardChat.UI/appsettings.json
@@ -1,9 +1,12 @@
 {
-  "Logging": {
-    "LogLevel": {
-      "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
-    }
-  },
-  "AllowedHosts": "*"
+    "Logging": {
+        "LogLevel": {
+            "Default": "Information",
+            "Microsoft.AspNetCore": "Warning"
+        }
+    },
+    "ConnectionStrings": {
+        "DbConnection": "Server=(localdb)\\mssqllocaldb;Database=ChalkboardChatDb;Trusted_Connection=True;"
+    },
+    "AllowedHosts": "*"
 }
