--- a/ChalkboardChat.UI/appsettings.json
+++ b/ChalkboardChat.UI/appsettings.json
@@ -4,6 +4,14 @@
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
+
+
   },
+  "ConnectionStrings": {
+    "DbConnection": "Server=USER-PC\\SQLEXPRESS;Database=UsersDB;Trusted_Connection=True;TrustServerCertificate=True;Integrated Security=True;MultipleActiveResultSets=True;",
+    "MessagesDb": "Server=USER-PC\\SQLEXPRESS;Database=MessagesDB;Trusted_Connection=True;TrustServerCertificate=True;Integrated Security=True;MultipleActiveResultSets=True;"
+
+  },
+
   "AllowedHosts": "*"
 }
