--- a/ChalkboardChat.UI/appsettings.json
+++ b/ChalkboardChat.UI/appsettings.json
@@ -8,9 +8,8 @@
 
   },
   "ConnectionStrings": {
-    "DbConnection": "Server=USER-PC\\SQLEXPRESS;Database=UsersDB;Trusted_Connection=True;TrustServerCertificate=True;Integrated Security=True;MultipleActiveResultSets=True;",
-    "MessagesDb": "Server=USER-PC\\SQLEXPRESS;Database=MessagesDB;Trusted_Connection=True;TrustServerCertificate=True;Integrated Security=True;MultipleActiveResultSets=True;"
-
+    "UsersDB": "Server=(localdb)\\mssqllocaldb;Database=UsersDB;Trusted_Connection=True;",
+    "MessagesDb": "Server=(localdb)\\mssqllocaldb;Database=MessagesDB;Trusted_Connection=True;"
   },
 
   "AllowedHosts": "*"
