--- a/ChalkboardChat.UI/appsettings.json
+++ b/ChalkboardChat.UI/appsettings.json
@@ -8,8 +8,13 @@
 
   },
   "ConnectionStrings": {
-    "DbConnection": "Server=USER-PC\\SQLEXPRESS;Database=UsersDB;Trusted_Connection=True;TrustServerCertificate=True;Integrated Security=True;MultipleActiveResultSets=True;",
-    "MessagesDb": "Server=USER-PC\\SQLEXPRESS;Database=MessagesDB;Trusted_Connection=True;TrustServerCertificate=True;Integrated Security=True;MultipleActiveResultSets=True;"
+    //// Använd för SQL Express
+    //"DbConnection": "Server=USER-PC\\SQLEXPRESS;Database=UsersDB;Trusted_Connection=True;TrustServerCertificate=True;Integrated Security=True;MultipleActiveResultSets=True;",
+    //"MessagesDb": "Server=USER-PC\\SQLEXPRESS;Database=MessagesDB;Trusted_Connection=True;TrustServerCertificate=True;Integrated Security=True;MultipleActiveResultSets=True;",
+    
+    // Använd för SSMS
+    "UsersDB": "Server=(localdb)\\mssqllocaldb;Database=UsersDB;Trusted_Connection=True;",
+    "MessagesDB": "Server=(localdb)\\mssqllocaldb;Database=MessagesDB;Trusted_Connection=True;"
 
   },
 
